# localizeai-nokast-app

./: .gitignore  App.tsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
.github/: copilot-instructions.md
backend/: README.md  main.py  prompt.txt  prompts.py  pyproject.toml  top_news_pipeline.py  whatsapp_service.py
components/: AIHelperBubble.tsx  AboutScreen.tsx  Button.tsx  Checkbox.tsx  DashboardScreen.tsx  GmailAuthScreen.tsx  Header.tsx  HomeScreen.tsx  ModelManagementScreen.tsx  PreferencesScreen.tsx  SettingsScreen.tsx  Sidebar.tsx  Spinner.tsx  Toggle.tsx  WelcomeScreen.tsx  WhatsAppConnect.tsx
services/: geminiService.ts
