[project]
name = "localizeai-nokast-app"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "duckdb>=1.4.1",
    "google-api-python-client>=2.183.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain>=1.0.5",
    "langchain-text-splitters>=1.0.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.12.0",
    "pandas>=2.2.0",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "requests",
    "google-auth",
    "python-multipart>=0.0.21",
]
